--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js Demo for JWT Authentication",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "node.js",
@@ -16,6 +17,7 @@
   "author": "bezkoder",
   "license": "ISC",
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.8.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
