--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.9.1",
     "openai": "^3.1.0",
     "sequelize": "^5.21.3"
   }
